added first message to be displayed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </div>
     <div id="subtitle">
     </div>
+    <div class="message_portion"></div>
+    
   </div>
 </body>
 <script src="script.js"></script>
