--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div id="subtitle">
     </div>
+    <div class="loader"></div>
     <div class="message_portion"></div>
     
   </div>
