--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="subtitle">
     </div>
     <div class="loader"></div>
-    <div class="message_portion"></div>
+    <div class="message-portion"></div>
     
   </div>
 </body>
