updated ad removed some mistakes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="gradient-border" id="camera">
       <video id="video">Video stream not available.</video>
     </div>
+    <div class="loader"></div>
     <div id="subtitle">
     </div>
-    <div class="loader"></div>
-    <div class="message-portion"></div>
+    <!-- <div class="message-portion"></div> -->
     
   </div>
 </body>
