compliment doesnt move video wrapper

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="main.css" type="text/css" media="all">
 </head>
 <body>
-  <div>
+  <div class="video-window-wrapper">
     <div class="gradient-border" id="camera">
       <video id="video">Video stream not available.</video>
     </div>
     <div class="loader"></div>
     <div id="subtitle">
-    </div>  
+    </div>
   </div>
 </body>
 <script src="script.js"></script>
