added flip video

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="video-window-wrapper">
+      <div class="mirror-camera">Flip camera</div>
       <div class="spinner">
         <div class="sk-cube-grid">
           <div class="sk-cube sk-cube1"></div>
