Added flip video - Changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div class="video-window-wrapper">
-      <div class="mirror-camera">Flip camera</div>
       <div class="spinner">
         <div class="sk-cube-grid">
           <div class="sk-cube sk-cube1"></div>
@@ -29,6 +28,7 @@
       </div>
       <div class="gradient-border gradient-border--hidden" id="camera">
         <video id="video">Video stream not available.</video>
+        <button type="button" class="mirror-camera"><img src="rotate-camera-icon.svg"></button>
       </div>
       <div id="subtitle"></div>
     </div>
