--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="main.css" type="text/css" media="all" />
     <link rel="stylesheet" href="spinner.css" type="text/css" media="all" />
+    <link rel="icon" href="https://i.ibb.co/c1RzzFB/favico.png">
   </head>
   <body>
     <div class="video-window-wrapper">
