added an arrow for activating camera hint

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zoom Mirror</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./assets/images/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./assets/images/favicon/site.webmanifest" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./stylesheet/main.css" type="text/css" media="all" />
   <link rel="stylesheet" href="./stylesheet/spinner.css" type="text/css" media="all" />
@@ -34,6 +34,9 @@
       <button type="button" class="mirror-camera">
         <img src="./assets/images/rotate-camera-icon.svg" />
       </button>
+    </div>
+    <div class="camera_arrow">
+      <img src="./assets/images/on_the_camera.png" alt="turn camera on arrow" />
     </div>
     <div id="subtitle"></div>
   </div>
