adding jumping arrow if camera is not open

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       </button>
     </div>
     <div class="camera_arrow">
-      <img src="./assets/images/on_the_camera.png" alt="turn camera on arrow" />
+      <img src="./assets/images/zoom-camera-bar.png" alt="turn camera on arrow" />
+      <img class="animate_arrow" src="./assets/images/arrow.svg" alt="turn camera on arrow" />
     </div>
     <div id="subtitle"></div>
   </div>
